# lgmtk

./: .gitignore  CMakeLists.txt  README.md  generator.lua  main.c  main.lua
.cache/clangd/index/: gl.c.B3C49B1D58B6A465.idx  glad.c.32FE6ECBB66A0460.idx  image.c.0C01516DA021ADFD.idx  lapi.c.9BB4FB9A7BB466EA.idx  lapi.h.6E7EDBD839539322.idx  lauxlib.c.69BC27CEFD97AC37.idx  lauxlib.h.8EEA6986A3C68103.idx  lauxlib.h.BA03C61250478E7B.idx  lbaselib.c.902BE258280D96D4.idx  lcode.c.253E737FAF689EEA.idx  lcode.h.EDA90C68B6682ED7.idx  lcorolib.c.C23DEF3C37FD18E4.idx  lctype.c.9366A6706223C4DC.idx  lctype.h.6C099E6B82B6B275.idx  ldblib.c.6FACBF33FC3AEB26.idx  ldebug.c.A6DC78C26B36B3CB.idx  ldebug.h.5BF883BCD0CA5235.idx  ldo.c.D3DEA09CFB587468.idx  ldo.h.3B13620F14BDFCB7.idx  ldump.c.F5A38D4B4C97DBCF.idx  lfunc.c.A49AE6FEAE1E63F9.idx  lfunc.h.F171C032E88FB006.idx  lgc.c.B9F36975083373D0.idx  lgc.h.093DB0DC28F40BB5.idx  lgmtk.c.EB3C785E8A9E632B.idx  linit.c.0A9B09B7A94CE8D3.idx  liolib.c.6F6E5F851B8DEAEA.idx  ljson.c.4625D6DC237F9AF3.idx  ljumptab.h.4C09DAFE984D7BA9.idx  llex.c.DD93CB86D1FE8E74.idx  llex.h.B06D9C61423C1DCE.idx  llimits.h.1811992505D60AB8.idx  lmathlib.c.82E985FDCA4A54E6.idx  lmem.c.C6815711432DCA0B.idx  lmem.h.EB207CBBA4E68FDF.idx  loadlib.c.7C54782BBF484855.idx  lobject.c.C3DC4B960D4DCE30.idx  lobject.h.40FEED7BBA477E18.idx  lopcodes.c.11E23AB479E5E94D.idx  lopcodes.h.B257915D25986D47.idx  (+30 more)
include/: common.h  helper.h  lgmtk.h  lua_helper.h
src/: lgmtk.c
src/modules/: font.c  fs.c  gl.c  image.c  imgui.c  sdl.c
src/modules/sdl/: sdl2.c  sdl3.c
